--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
+/* to reset all margin and padding spaces on your page */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px; */
+  /* padding-left: 40px; */
+  /* padding-right: 40px; */
+
+  /* shorcut of writing padding elements */
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
+  /* bottom-left: 5px sollid #1098ad; */
+  /* bottom-right: 5px solid #1098ad; */
+  width: 500px;
 }
 
 h1,
@@ -25,10 +64,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -39,12 +81,25 @@ h4 {
 
 p {
   font-size: 22px;
-
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20 px;
+  /* adding margin spaces to the list elements  */
+  margin-bottom: 10px;
+}
+
+/* to remove the margin spaces on the last child of an element do this  */
+li:last-child {
+  margin-bottom: 0;
 }
 /* 
 footer p {
@@ -72,7 +127,7 @@ footer p {
 .related {
   list-style: none;
 }
-
+/*  
 .main-header {
   background-color: #f7f7f7;
 }
@@ -82,8 +137,8 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   /* bottom-left: 5px sollid #1098ad; */
-  /* bottom-right: 5px solid #1098ad; */
-}
+/* bottom-right: 5px solid #1098ad; */
+/* }  */
 
 li:first-child {
   font-weight: bold;
@@ -125,6 +180,7 @@ a:active {
 
 /* Link, visited, Hover and active  */
 
-nav {
-  font-size: 18px;
+.post-img {
+  width: 100%;
+  height: auto;
 }
